--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,6 +28,7 @@ section#contenido{
 
 body{
 	background-image: url("../img/foto.jpg");
+	background-attachment: fixed; 
 	font-family: "FRABK";
 }
 
@@ -55,11 +56,12 @@ aside{
 	width: 20%;
 	float: right;
 	background-color: #808080;
+	margin: 3px;
 }
 
 section{
 	padding: 0px;
-	margin: 0px;
+	margin-bottom: 5px;
 }
 article{
 	background-color: #F2B80D;
@@ -74,9 +76,10 @@ pre{
 footer{
 	background-color: #808080; 
 	color:#fff;
-	margin: 2px;
-	padding: 2px;
+	margin-top:15px;
+	padding:5px;
 	font-family: Helvetica;
+	border-radius: 10px;
 }
 #derecha{
 	float: left;
@@ -86,6 +89,7 @@ footer{
 	float: right;
 	width: 30%;
 }
+
 .menu li a{
 	background-color: #fff;
 	color: #000;
